--- a/src/index.html
+++ b/src/index.html
@@ -28,14 +28,17 @@
             placeholder="Search images..."
           />
         </label>
-        <button class="btn-search" type="submit">Search</button>
+        <button class="btn btn-search" type="submit">Search</button>
       </form>
       <div class="loading visually-hidden">
         <span class="loader"></span>
       </div>
     </section>
-    <section>
+    <section class="gallery-wrap">
       <ul class="gallery"></ul>
+      <button type="button" class="btn btn-more visually-hidden">
+        Load more
+      </button>
     </section>
 
     <script type="module" src="./main.js"></script>
